--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           colors: {
             'nav-bg': '#F85559',
             'text-color': '#FFF',
+            'footer-color': '#121212',
           }
         }
       }
@@ -38,10 +39,11 @@
 </head>
 
 <body class="font">
-  <header class="container mx-auto py-5 lg:py-5  md:py-5 px-5 md:px-5 lg:px-10">
+  <header class="container mx-auto py-5 lg:py-5 md:py-5 px-5 md:px-5 lg:px-10">
     <!-- navbar -->
     <nav class="container mx-auto lg:py-5 lg:px-10">
-      <div class=" relative flex flex-row justify-between items-center bg-nav-bg rounded-full px-8 py-2">
+      <div
+        class=" relative flex flex-row justify-between items-center md:bg-nav-bg lg:bg-nav-bg rounded-full px-8 py-2">
         <div class="text-text-color opacity-0 lg:opacity-100   ">
           <a class="mr-5" href="">Home</a>
           <a class="mr-5" href="">About Us</a>
@@ -53,13 +55,15 @@
             <img src="/images/logo.png" alt="">
           </div>
           <div>
-            <h2 class="text-text-color lg:text-3xl">Fruit Burst</h2>
+            <h2 class="text-text-color md:text-2xl lg:text-3xl">Fruit Burst</h2>
           </div>
         </div>
         <div>
-          <div class="relative hidden items-center lg:block mt-6">
-            <div class="absolute  left-[75%] top-[1.5px]"><i class="fa-solid fa-magnifying-glass"></i></div>
-            <input class="rounded-lg text-xs py-1 px-2 " type="text" name="" placeholder="search here " id="">
+          <div class="relative hidden items-center lg:block lg:mt-6">
+            <div class="absolute md:left-[10%] lg:left-[75%] lg:top-[1.5px]"><i
+                class="fa-solid fa-magnifying-glass"></i></div>
+            <input class="rounded-full text-xs w-[55%] md:w-[40%] lg:w-full lg:py-1 lg:px-2 " type="text" name=""
+              placeholder="search here " id="">
           </div>
           <div>
             <div class="dropdown">
@@ -69,13 +73,13 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
                 </svg>
               </label>
-              <ul tabindex="0" class="menu menu-sm dropdown-content z-10 text-white bg-black">
-                <a class="" href="">Home</a>
-                <a class="" href="">About Us</a>
-                <a class="" href="">Shop</a>
-                <a class="" href="">All Fruits</a>
+              <ul tabindex="0" class="menu menu-sm dropdown-content space-y-3 z-10 text-white px-[23px] pb-5 bg-black">
+                <a href="">Home</a>
+                <a href="">About Us</a>
+                <a href="">Shop</a>
+                <a href="">All Fruits</a>
+              </ul>
             </div>
-            </ul>
           </div>
         </div>
       </div>
@@ -83,9 +87,9 @@
     </nav>
     <!-- banner section -->
     <section class="lg:px-11 lg:mb-44">
-      <div class="carousel w-full relative ">
+      <div class="carousel w-full relative rounded-[10px]">
         <!-- banner-1 -->
-        <div id="slide1" class="carousel-item relative w-full mt-5 rounded-3xl">
+        <div id="slide1" class="carousel-item relative w-full mt-5">
           <div class="absolute bg-gradient-to-t from-stone-950 w-[100%] h-[100%]"></div>
           <div class="absolute text-center w-full top-3 space-y-2 md:top-20 lg:top-[30%] lg:space-y-4">
             <h3 class=" text-2xl md:text-4xl lg:text-6xl text-text-color">Exotic tastes at your <br> doorstep</h3>
@@ -134,7 +138,7 @@
             <p class="text-xs text-text-color">We supply highly quality organic products</p>
             <button class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop Now</button>
           </div>
-          <img src="/images/banner4.png" class="w-full" />
+          <img src="/images/banner4.png" class="w-full " />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
@@ -177,9 +181,9 @@
     </section>
   </header>
   <main>
-    <section class="container mx-auto py-3   md:py-5 px-5 md:px-5 lg:px-10">
-      <div
-        class="flex  flex-col md:flex-row lg:flex-row justify-between items-center lg:py-5 lg:px-11 text-center py-4">
+    <!-- deal section -->
+    <section class="container mx-auto py-3 lg:mt-[-5%]  md:py-5 px-5 md:px-5 lg:px-10">
+      <div class="flex  flex-col md:flex-row lg:flex-row justify-between items-center lg:px-11 text-center">
         <div class="space-y-3 ">
           <h2 class="text-2xl md:text-4xl lg:text-5xl font-extrabold ">Deal of the day</h2>
           <p class="text-xs">Contrary to popular belief, is not simply <br> random text. It has roots in a piece of<br>
@@ -224,7 +228,7 @@
         </div>
       </div>
       <div
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center justify-around items-center py-10 md::py-10 lg:py-10 gap-4 ">
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center justify-around items-center lg:px-10 py-10 md::py-10 lg:py-10 gap-4 ">
         <div class="space-y-5 border-2 border-slate-100 py-10">
           <img class="w-[20%] mx-auto" src="/images/fruit6.png" alt="">
           <p>12.90$ - 18.85$</p>
@@ -383,10 +387,10 @@
           class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop All</button></div>
     </section>
     <!-- expert section -->
-    <section class="container mx-auto py-3 md:py-5 px-5 md:px-5 lg:px-10">
-      <div class="relative text-center lg:py-5 h-[1000px]">
-        <div class="w-[100%] h-[100%] md:h-[55%] lg:h-[60%] absolute bg-gradient-to-t from-stone-950"></div>
-        <img class="h-[100%] md:h-[55%] lg:h-[60%]" src="/images/team.png" alt="">
+    <section class="container mx-auto py-3 md:py-5 px-5 md:px-5 lg:px-20">
+      <div class="relative text-center lg:py-5 h-[1000px] ">
+        <div class="lg:w-[100%] h-[100%] md:h-[55%] lg:h-[60%] absolute bg-gradient-to-t from-stone-950"></div>
+        <img class="h-[100%] md:h-[55%]  lg:h-[60%]" src="/images/team.png" alt="">
         <div
           class="lg:py-5 absolute left-[5%] md:left-[18%] lg:left-[16%] bottom-[1%]  md:bottom-[50%] lg:bottom-[53%]">
           <div class="py-10 space-y-4">
@@ -408,9 +412,9 @@
                 <p class="text-xs text-text-color">Fruits Expert</p>
               </div>
               <div class="">
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
-                <i class="fa-brands  mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
+                <i class="fa-brands p-[2px]  mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
               </div>
             </div>
             <!-- expert-2 -->
@@ -423,9 +427,9 @@
                 <p class="text-xs text-text-color">Fruits Expert</p>
               </div>
               <div class="">
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
               </div>
             </div>
             <!-- expert-3 -->
@@ -438,9 +442,9 @@
                 <p class="text-xs text-text-color">Fruits Expert</p>
               </div>
               <div class="">
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
-                <i class="fa-brands mr-3  rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
+                <i class="fa-brands p-[2px] mr-3  rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
               </div>
             </div>
             <!-- expert-4 -->
@@ -453,43 +457,157 @@
                 <p class="text-xs text-text-color">Fruits Expert</p>
               </div>
               <div class="">
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
-                <i class="fa-brands mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-facebook"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-twitter"></i>
+                <i class="fa-brands p-[2px] mr-3 rounded-full text-white bg-nav-bg fa-linkedin-in"></i>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="container mx-auto py-3 md:py-5 px-5 md:px-5 lg:px-10">
-      <div>
-<h2>Why Choose Us</h2>
-<p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    <!-- why choose section -->
+    <section class="container mx-auto md:mt-[-55%] lg:mt-[-25%] px-5 md:px-5 lg:px-20">
+      <div class="text-center space-y-4">
+        <h2 class="text-xl md:text-3xl lg:text-5xl font-extrabold">Why Choose Us</h2>
+        <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+          <br> Latin literature
+          from 45 BC, making it over 2000 years old.
+        </p>
       </div>
-      <div>
-        <div>
-          <div>
-
+      <div class=" grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 py-10 gap-5 md:gap-5 lg:gap-9">
+        <div class="space-y-8">
+          <div class="flex flex-col md:flex-col lg:flex-row space-x-4 justify-start gap-3 items-center">
+            <div>
+              <i
+                class="fa-solid rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-users"></i>
+            </div>
+            <!-- Dedicated Team part -->
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-start">Dedicated Team</h2>
+              <hr class="w-28 mx-auto lg:m-0">
+              <p class="text-xs text-center lg:text-start">Professional employees are there for you to
+                pick the most amazing and fresh
+                fruits.
+              </p>
+            </div>
           </div>
-          <div>
-
+          <div class="flex flex-col md:flex-col gap-3 lg:flex-row space-x-4 justify-start items-center">
+            <div>
+              <i
+                class="fa-regular rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-heart"></i>
+            </div>
+            <!-- Fresh is Best part -->
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-start">Fresh is Best</h2>
+              <hr class="w-28 mx-auto lg:m-0">
+              <p class="text-xs text-center lg:text-start">Professional employees are there for you to
+                pick the most amazing and fresh
+                fruits.
+              </p>
+            </div>
+          </div>
+          <div class="flex flex-col md:flex-col gap-3 space-x-4 lg:flex-row justify-start items-center">
+            <div>
+              <i
+                class="fa-solid rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-gift"></i>
+            </div>
+            <!-- Gift Certificates part -->
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-start">Gift Certificates</h2>
+              <hr class="w-28 mx-auto lg:m-0">
+              <p class="text-xs text-center lg:text-start">Professional employees are there for you to
+                pick the most amazing and fresh
+                fruits.
+              </p>
+            </div>
           </div>
         </div>
         <div>
-
+          <img class="w-[100%] mx-auto" src="/images/whychoose1.png" alt="">
         </div>
-        <div>
-          <div>
-
+        <!-- Integrated Supplier part-->
+        <div class="space-y-8">
+          <div class="flex flex-col gap-3  md:flex-col lg:flex-row space-x-4 justify-start items-center">
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-end">Integrated
+                Supplier</h2>
+              <hr class="w-28  mx-auto lg:ml-[63%]">
+              <p class="text-xs text-center lg:text-end">Professional employees are there for you to pick
+                the most amazing and fresh
+                fruits.
+              </p>
+            </div>
+            <div>
+              <i
+                class="fa-solid rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-lemon"></i>
+            </div>
           </div>
-          <div>
-
+          <!-- Sustainable Practice part -->
+          <div class="flex flex-col gap-3 md:flex-col lg:flex-row space-x-4  justify-start items-center">
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-end">Sustainable Practice
+              </h2>
+              <hr class="w-28  mx-auto  lg:ml-[63%]">
+              <p class="text-xs text-center lg:text-end">Professional employees are there for you to
+                pick the most amazing and fresh
+                fruits.
+              </p>
+            </div>
+            <div>
+              <i
+                class="fa-solid rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-ice-cream"></i>
+            </div>
+          </div>
+          <!-- The Benefits Only part -->
+          <div class="flex flex-col gap-3 md:flex-col lg:flex-row space-x-4 justify-st items-center">
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-end">The Benefits Only</h2>
+              <hr class="w-28 mx-auto lg:ml-[63%]">
+              <p class="text-xs text-center lg:text-end">Professional employees are there for you to
+                pick the most amazing and fresh
+                fruits.
+              </p>
+            </div>
+            <div>
+              <i
+                class="fa-regular rounded-full flex justify-center items-center bg-slate-300 text-white w-8 h-8 fa-thumbs-up"></i>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <!-- footer part -->
+  <footer>
+    <section class="bg-footer-color space-y-10 py-20">
+      <div class="flex flex-row justify-center gap-4 items-center">
+        <div>
+          <img src="/images/logo.png" alt="">
+        </div>
+        <div>
+          <h2 class="text-text-color text-2xl">Fruit Burst</h2>
+        </div>
+      </div>
+      <div
+        class="flex flex-wrap content-center md:flex-row text-text-color text-sm lg:flex-row justify-center gap-10 items-center mx-auto w-[90%]">
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Shop</a>
+        <a href="">All Fruits</a>
+        <a href="">Support</a>
+        <a href="">My Account</a>
+      </div>
+      <div class="flex flex-row justify-center gap-10 items-center">
+        <i class="fa-brands text-lg text-text-color fa-twitter"></i>
+        <i class="fa-brands text-lg text-text-color fa-facebook"></i>
+        <i class="fa-brands text-lg text-text-color fa-square-youtube"></i>
+        <i class="fa-brands text-lg text-text-color fa-linkedin-in"></i>
+        <i class="fa-brands text-lg text-text-color fa-square-instagram"></i>
+        <i class="fa-brands text-lg text-text-color fa-apple"></i>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
